# sonic-ecosystem-engine

./: .gitignore  DESIGN.md  PLAN.md  README.md  main.py  pyproject.toml  test_medium.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
engine/: agent.py  bridge.py  control.py  ecosystem.py  medium.py  species.py  voice_chain.py
engine/archetypes/: __init__.py  base.py  caller.py  clicker.py  drone.py  responder.py  swarm.py
generation/: derive.py  dna.py  species.py  tunings.py
synthdefs/: effects.scd  medium.scd  sources.scd
synthdefs/compiled/: fx_bpf.scsyndef  fx_chorus.scsyndef  fx_delay.scsyndef  fx_fold.scsyndef  fx_hpf.scsyndef  fx_lpf.scsyndef  fx_pan_out.scsyndef  fx_ring.scsyndef  med_eq.scsyndef  med_limiter.scsyndef  med_master.scsyndef  med_noise_floor.scsyndef  med_resonance.scsyndef  med_reverb.scsyndef  src_click.scsyndef  src_fm.scsyndef  src_formant.scsyndef  src_grain.scsyndef  src_noise.scsyndef  src_sine.scsyndef  src_string.scsyndef
web/: index.html  luxurine.html
